--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=CommVill;Username=postgres;Password=1234"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=CommVill;Username=postgres;Password=kriptone09123"
   },
   "Logging": {
     "LogLevel": {
